--- a/templates/register.html
+++ b/templates/register.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro de Usuario - Reconocimiento Facial</title>
+    <title>Registro Facial</title>
     
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="container mt-5">
+    <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-4">
-                <h2 class="text-center mb-4">Registro de Usuario</h2>
+            <div class="col-md-4 text-center">
 
-                <form action="/register" method="POST">
-                    <div class="mb-3">
-                        <label for="username" class="form-label">Usuario</label>
-                        <input type="text" class="form-control" id="username" name="username" required>
+                <h2>Registrar usuario</h2>
+
+                <!-- Mensaje de alerta de registro fallido -->
+                {% with messages = get_flashed_messages() %}
+                  {% if messages %}
+                    <div class="alert alert-success">
+                      {{ messages[0] }}
+                    </div>
+                  {% endif %}
+                {% endwith %}
+
+
+                <form method="POST" action="/register_face">
+                    <div class="form-group">
+                        <label for="user_id">Usuario</label>
+                        <input type="text" class="form-control" id="user_id" name="user_id" required>
                     </div>
                     
                     <!-- Div para mostrar la cámara y capturar la imagen -->
@@ -25,12 +36,9 @@
                         <label for="camera">Capturar imagen</label>
                         <video id="camera" width="320" height="240" autoplay></video>
                         <input type="hidden" id="image" name="image">
-                        <!--
-                        <button type="button" class="btn btn-primary" onclick="captureImage()">Capturar</button>
-                        -->
                     </div>
 
-                    <button type="submit" class="btn btn-success" id="capture">Iniciar sesión</button>
+                    <button type="submit" class="btn btn-success" id="capture">Registrar</button>
                 </form>
             </div>
         </div>
@@ -52,12 +60,12 @@
             canvas.getContext('2d').drawImage(video, 0, 0);
             const dataUrl = canvas.toDataURL('image/png');
             document.getElementById('image').value = dataUrl;
-            document.querySelector('form').submit();
         });
     </script>
-    
+
     <!-- Bootstrap JS y Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+
 </body>
 </html>
