--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -19,11 +19,10 @@
                 <div class="user-info">
                     <h4>Datos del Usuario</h4>
                     <p><strong>Nombre:</strong> {{ user_data['name'] }}</p>
-                    <p><strong>Identificación:</strong> {{ user_data['id'] }}</p>
                     <p><strong>Último Ingreso:</strong> {{ user_data['last_login'] }}</p>
-                    <img src="{{ url_for('static', filename='uploads/' + user_data['id'] + '.png') }}" alt="Imagen del Usuario" class="img-thumbnail" width="320" height="240">
+                    <img src="{{ url_for('static', filename='faces/' + user_data['name'] + '.jpg') }}" alt="Imagen del Usuario" class="img-thumbnail" width="320" height="240">
                 </div>
-
+                <br>
                 <a href="{{ url_for('logout') }}" class="btn btn-danger">Cerrar Sesión</a>
             </div>
         </div>
